home_button_bug_correction

--- a/flexbox.html
+++ b/flexbox.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <a href="home.html"
+      <a href="index.html"
         ><svg
           id="home_icon"
           xmlns="http://www.w3.org/2000/svg"
