--- a/flexbox.html
+++ b/flexbox.html
@@ -62,6 +62,10 @@
           itens filhos.
         </p>
 
+        <figure>
+          <img src="imgs/flex_container.png" alt="Código para usar o flexbox" />
+        </figure>
+
         <h2>Terminologia Essencial</h2>
   <p>Entenda os principais termos usados no CSS Flexbox e Grid:</p>
   <ul>
