--- a/grid.html
+++ b/grid.html
@@ -55,6 +55,10 @@
       linhas e posicionar os itens de forma precisa.
     </p>
 
+    <figure>
+      <img src="imgs/grid_container.png" alt="Código para usar o flexbox" />
+    </figure>
+
     <h2>Terminologia Essencial</h2>
     <p>Entenda os principais termos usados no CSS Grid:</p>
     <ul>
