overlay_bug_correction

--- a/grid.html
+++ b/grid.html
@@ -39,7 +39,7 @@
 				</div>
 				<label id="example_title_grid"></label>
 				<div class="popup_code_content">
-					<div id="overlay_grid" class="overlay"></div>
+					<div id="overlay" class="overlay"></div>
 					<code class="language-css">
 						<p>.grid-container {</p>
 						<ul class="code-list" id="code_list_grid"></ul>
