--- a/flexbox.html
+++ b/flexbox.html
@@ -41,6 +41,7 @@
 				</div>
 				<label id="example_title"></label>
 				<div class="popup_code_content">
+					<div id="overlay_flex" class="overlay"></div>
 					<code class="language-css">
 						<p>.grid-container {</p>
 						<ul class="code-list" id="code_list">
