--- a/flexbox.html
+++ b/flexbox.html
@@ -184,7 +184,7 @@
 								Espaço ao redor (space-around)
 							</option>
 							<option value="space-evenly">
-								Espaço eventual (space-evenly)
+								Espaço igual (space-evenly)
 							</option>
 						</select>
 
@@ -258,7 +258,7 @@
 									Espaço ao redor (space-around)
 								</option>
 								<option value="space-evenly">
-									Espaço eventual (space-evenly)
+									Espaço igual (space-evenly)
 								</option>
 							</select>
 
