--- a/grid.html
+++ b/grid.html
@@ -278,7 +278,7 @@
 			</figure>
 
 			<p>Arthur Bressan Silva</p>
-			<p>&copy; 2025 Blog CSS</p>
+			<p>&copy; 2025 CSS Layout Lab</p>
 		</footer>
 
 		<script src="script.js"></script>
