--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       </figure>
       
       <p>Arthur Bressan Silva</p>
-      <p>&copy; 2025 Blog CSS</p>
+      <p>&copy; 2025 CSS Layout Lab</p>
 
     </footer>
   </body>
