rename_flex_template

--- a/flexbox.html
+++ b/flexbox.html
@@ -43,7 +43,7 @@
 				<div class="popup_code_content">
 					<div id="overlay_flex" class="overlay"></div>
 					<code class="language-css">
-						<p>.grid-container {</p>
+						<p>.flex-container {</p>
 						<ul class="code-list" id="code_list">
 							<!-- Itens serão adicionados via JS -->
 						</ul>
